TinyUSDGen/TinyUSDGen/Headers/c-tinyusd.h

C_TINYUSD_EXPORT void *c_tinyusd_malloc(size_t nbytes);
/* Returns 0 when failed. */
C_TINYUSD_EXPORT int c_tinyusd_free(void *ptr);
/*
   NOTE: Use dedicated enum value for token[] and string[]
   (therse use C struct `c_tinyusd_token_vector` and `c_tinyusd_string_vector`
   respectively)

   Use C_TINYUSD_VALUE_1D_BIT for other numerical value type to represent 1D
   array.
*/
typedef enum {
  C_TINYUSD_VALUE_UNKNOWN,
  C_TINYUSD_VALUE_TOKEN,
  C_TINYUSD_VALUE_TOKEN_VECTOR, /* token[] */
  C_TINYUSD_VALUE_STRING,
  C_TINYUSD_VALUE_STRING_VECTOR, /* string[] */
  C_TINYUSD_VALUE_BOOL,
  C_TINYUSD_VALUE_HALF,
  C_TINYUSD_VALUE_HALF2,
  C_TINYUSD_VALUE_HALF3,
  C_TINYUSD_VALUE_HALF4,
  C_TINYUSD_VALUE_INT,
  C_TINYUSD_VALUE_INT2,
  C_TINYUSD_VALUE_INT3,
  C_TINYUSD_VALUE_INT4,
  C_TINYUSD_VALUE_UINT,
  C_TINYUSD_VALUE_UINT2,
  C_TINYUSD_VALUE_UINT3,
  C_TINYUSD_VALUE_UINT4,
  C_TINYUSD_VALUE_INT64,
  C_TINYUSD_VALUE_UINT64,
  C_TINYUSD_VALUE_FLOAT,
  C_TINYUSD_VALUE_FLOAT2,
  C_TINYUSD_VALUE_FLOAT3,
  C_TINYUSD_VALUE_FLOAT4,
  C_TINYUSD_VALUE_DOUBLE,
  C_TINYUSD_VALUE_DOUBLE2,
  C_TINYUSD_VALUE_DOUBLE3,
  C_TINYUSD_VALUE_DOUBLE4,
  C_TINYUSD_VALUE_QUATH,
  C_TINYUSD_VALUE_QUATF,
  C_TINYUSD_VALUE_QUATD,
  C_TINYUSD_VALUE_COLOR3H,
  C_TINYUSD_VALUE_COLOR3F,
  C_TINYUSD_VALUE_COLOR3D,
  C_TINYUSD_VALUE_COLOR4H,
  C_TINYUSD_VALUE_COLOR4F,
  C_TINYUSD_VALUE_COLOR4D,
  C_TINYUSD_VALUE_TEXCOORD2H,
  C_TINYUSD_VALUE_TEXCOORD2F,
  C_TINYUSD_VALUE_TEXCOORD2D,
  C_TINYUSD_VALUE_TEXCOORD3H,
  C_TINYUSD_VALUE_TEXCOORD3F,
  C_TINYUSD_VALUE_TEXCOORD3D,
  C_TINYUSD_VALUE_NORMAL3H,
  C_TINYUSD_VALUE_NORMAL3F,
  C_TINYUSD_VALUE_NORMAL3D,
  C_TINYUSD_VALUE_VECTOR3H,
  C_TINYUSD_VALUE_VECTOR3F,
  C_TINYUSD_VALUE_VECTOR3D,
  C_TINYUSD_VALUE_POINT3H,
  C_TINYUSD_VALUE_POINT3F,
  C_TINYUSD_VALUE_POINT3D,
  C_TINYUSD_VALUE_MATRIX2D,
  C_TINYUSD_VALUE_MATRIX3D,
  C_TINYUSD_VALUE_MATRIX4D,
  C_TINYUSD_VALUE_FRAME4D,
  C_TINYUSD_VALUE_DICTIONARY, /* tinyusdz::value::CustomData. VtDictionary equivalent in pxrUSD */
  C_TINYUSD_VALUE_END, /* terminator */
} CTinyUSDValueType;
/* NOTE: No `Geom` prefix to usdGeom prims in C API. */
typedef enum {
  C_TINYUSD_PRIM_UNKNOWN,
  C_TINYUSD_PRIM_MODEL,
  C_TINYUSD_PRIM_SCOPE,
  C_TINYUSD_PRIM_XFORM,
  C_TINYUSD_PRIM_MESH,
  C_TINYUSD_PRIM_GEOMSUBSET,
  C_TINYUSD_PRIM_MATERIAL,
  C_TINYUSD_PRIM_SHADER,
  C_TINYUSD_PRIM_CAMERA,
  C_TINYUSD_PRIM_SPHERE_LIGHT,
  C_TINYUSD_PRIM_DISTANT_LIGHT,
  C_TINYUSD_PRIM_RECT_LIGHT,
  /* TODO: Add more prim types... */
  C_TINYUSD_PRIM_END,
} CTinyUSDPrimType;
/*
   Assume struct elements will be tightly packed in C11.
   TODO: Ensure struct elements are tightly packed.
 */
typedef struct {
  int x;
  int y;
} c_tinyusd_int2_t;
typedef struct {
  int x;
  int y;
  int z;
} c_tinyusd_int3_t;
typedef struct {
  int x;
  int y;
  int z;
  int w;
} c_tinyusd_int4_t;
typedef struct {
  float x;
  float y;
} c_tinyusd_float2_t;
typedef struct {
  float x;
  float y;
  float z;
} c_tinyusd_float3_t;
typedef struct c_tinyusd_token_t c_tinyusd_token_t;
C_TINYUSD_EXPORT c_tinyusd_token_t *c_tinyusd_token_new(const char *str);
/* Duplicate token object. Return null when failed. */
C_TINYUSD_EXPORT c_tinyusd_token_t *c_tinyusd_token_dup(
    const c_tinyusd_token_t *tok);
/* Length of token string. equivalent to std::string::size. */
C_TINYUSD_EXPORT size_t c_tinyusd_token_size(const c_tinyusd_token_t *tok);
/*
   Get C char from a token.
   Returned char pointer is valid until `c_tinyusd_token` instance is free'ed.
 */
C_TINYUSD_EXPORT const char *c_tinyusd_token_str(const c_tinyusd_token_t *tok);
/*
   Free token
   Return 0 when failed to free.
 */
C_TINYUSD_EXPORT int c_tinyusd_token_free(c_tinyusd_token_t *tok);
/*   opaque pointer to `std::vector<tinyusd::value::token>`. */
typedef struct c_tinyusd_token_vector_t c_tinyusd_token_vector_t;
/*  New token vector(array) with size zero(empty) */

C_TINYUSD_EXPORT c_tinyusd_token_vector_t *c_tinyusd_token_vector_new_empty();
/*  New token vector(array) with given size `n` */

C_TINYUSD_EXPORT c_tinyusd_token_vector_t *c_tinyusd_token_vector_new(
    const size_t n, const char **toks);
C_TINYUSD_EXPORT int c_tinyusd_token_vector_free(c_tinyusd_token_vector_t *sv);
/*
   Returns number of elements.
   0 when empty or `tv` is invalid.
 */
C_TINYUSD_EXPORT size_t
c_tinyusd_token_vector_size(const c_tinyusd_token_vector_t *sv);
C_TINYUSD_EXPORT int c_tinyusd_token_vector_clear(c_tinyusd_token_vector_t *sv);
C_TINYUSD_EXPORT int c_tinyusd_token_vector_resize(c_tinyusd_token_vector_t *sv,
                                                   const size_t n);
/*
   Return const string pointer for given index.
   Returns nullptr when index is out-of-range.
*/
C_TINYUSD_EXPORT const char *c_tinyusd_token_vector_str(
    const c_tinyusd_token_vector_t *sv, const size_t idx);
/*
   Replace `index`th token.
   Returns 0 when `sv` is invalid or `index` is out-of-range.
 */
C_TINYUSD_EXPORT int c_tinyusd_token_vector_replace(
    c_tinyusd_token_vector_t *sv, const size_t idx, const char *str);
/* opaque pointer to `std::string`.*/
typedef struct c_tinyusd_string_t c_tinyusd_string_t;
C_TINYUSD_EXPORT c_tinyusd_string_t *c_tinyusd_string_new_empty();
C_TINYUSD_EXPORT c_tinyusd_string_t *c_tinyusd_string_new(const char *str);
/* Length of string. equivalent to std::string::size. */
C_TINYUSD_EXPORT size_t c_tinyusd_string_size(const c_tinyusd_string_t *s);
/* Replace existing string with given `str`.
 * `c_tinyusd_string` object must be new'ed beforehand.
 * Return 0 when failed to set.
 */
C_TINYUSD_EXPORT int c_tinyusd_string_replace(c_tinyusd_string_t *s,
                                              const char *str);
/* Get C char(`std::string::c_str()`)
 * Returned char pointer is valid until `c_tinyusd_string` instance is free'ed.
 */
C_TINYUSD_EXPORT const char *c_tinyusd_string_str(const c_tinyusd_string_t *s);
C_TINYUSD_EXPORT int c_tinyusd_string_free(c_tinyusd_string_t *s);
typedef struct {
  void *data;  // opaque pointer to `std::vector<std::string>`.
} c_tinyusd_string_vector;
/*   New string vector(array) with given size `n` */
C_TINYUSD_EXPORT int c_tinyusd_string_vector_new_empty(
    c_tinyusd_string_vector *sv, const size_t n);
C_TINYUSD_EXPORT int c_tinyusd_string_vector_new(c_tinyusd_string_vector *sv,
                                                 const size_t n,
                                                 const char **strs);
/*
   Returns number of elements.
   0 when empty or `sv` is invalid.
 */
C_TINYUSD_EXPORT size_t
c_tinyusd_string_vector_size(const c_tinyusd_string_vector *sv);
C_TINYUSD_EXPORT int c_tinyusd_string_vector_clear(c_tinyusd_string_vector *sv);
C_TINYUSD_EXPORT int c_tinyusd_string_vector_resize(c_tinyusd_string_vector *sv,
                                                    const size_t n);
/*
   Return const string pointer for given index.
   Returns nullptr when index is out-of-range.
 */
C_TINYUSD_EXPORT const char *c_tinyusd_string_vector_str(
    const c_tinyusd_string_vector *sv, const size_t idx);
/*
   Replace `index`th string.
   Returns 0 when `sv` is invalid or `index` is out-of-range.
 */
C_TINYUSD_EXPORT int c_tinyusd_string_vector_replace(
    c_tinyusd_string_vector *sv, const size_t idx, const char *str);
C_TINYUSD_EXPORT int c_tinyusd_string_vector_free(c_tinyusd_string_vector *sv);
/*
   Return the name of Prim type(e.g. "Xform", "Mesh", ...).
   Return NULL for unsupported/unknown Prim type.
   Returned char pointer is valid until Prim is modified or deleted.
 */
C_TINYUSD_EXPORT const char *c_tinyusd_prim_type_name(
    CTinyUSDPrimType prim_type);
/*
   Return Builtin PrimType from a string.
   Returns C_TINYUSD_PRIM_UNKNOWN for invalid or unknown/unsupported Prim type
 */
CTinyUSDPrimType c_tinyusd_prim_type_from_string(const char *prim_type);
/*
   Returns name of ValueType.
   The pointer points to static Thread-local storage(so thread-safe), thus no
   need to free it.
 */
C_TINYUSD_EXPORT const char *c_tinyusd_value_type_name(
    CTinyUSDValueType value_type);
/*
   Return 1: Value type is numeric type(float3, int, ...). 0 otherwise(e.g. token, dictionary, ...)
 */
C_TINYUSD_EXPORT uint32_t c_tinyusd_value_type_is_numeric(CTinyUSDValueType value_type);
/*
   Returns sizeof(value_type);
   For non-numeric value type(e.g. STRING, TOKEN) and invalid enum value, it
   returns 0. NOTE: Returns 1 for bool type.
 */
C_TINYUSD_EXPORT uint32_t c_tinyusd_value_type_sizeof(CTinyUSDValueType value_type);
/*
   Returns the number of components of given value_type;
   For example, 3 for C_TINYUSD_VALUE_POINT3F.
   For non-numeric value type(e.g. STRING, TOKEN), it returns 0.
   For scalar type, it returns 1.
 */
C_TINYUSD_EXPORT uint32_t
c_tinyusd_value_type_components(CTinyUSDValueType value_type);
/*  opaque pointer to tinyusdz::value::Value */
typedef struct CTinyUSDValue CTinyUSDValue;
/* Return value type enum.
   Returns C_TINYUSD_VALUE_UNKNOWN when `value` is nullptr or invalid.
 */
C_TINYUSD_EXPORT CTinyUSDValueType c_tinyusd_value_type(const CTinyUSDValue *value);
/*
  New Value with null(empty) value.
 */
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_null();
C_TINYUSD_EXPORT int c_tinyusd_value_free(CTinyUSDValue *val);
/*
   Get string representation of Value content(pprint).

   Return 0 upon error.
*/
C_TINYUSD_EXPORT int c_tinyusd_value_to_string(const CTinyUSDValue *val,
                                               c_tinyusd_string_t *str);
/* Free Value.
   Internally calls `c_tinyusd_buffer_free` to free buffer associated with this
   Value.
 */
C_TINYUSD_EXPORT int c_tinyusd_value_free(CTinyUSDValue *val);
/*
   New Value with token type.
   NOTE: token data are copied. So it is safe to free token after calling this
   function.
*/
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_token(
    const c_tinyusd_token_t *val);
/*
   New Value with string type.
   NOTE: string data are copied. So it is safe to free string after calling this
   function.
 */
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_string(
    const c_tinyusd_string_t *val);
/*
   New Value with specific type.
   NOTE: Datas are copied.
   Returns 1 upon success, 0 failed.
 */
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_int(int val);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_int2(c_tinyusd_int2_t val);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_int3(c_tinyusd_int3_t val);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_int4(c_tinyusd_int4_t val);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_float(float val);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_float2(
    c_tinyusd_float2_t val);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_float3(
    c_tinyusd_float3_t val);