TinyUSDGen/Evergine.Bindings.TinyUSD/Generated/Funtions.cs

using System;
using System.Runtime.InteropServices;

namespace Evergine.Bindings.TinyUSD
{
	public static unsafe partial class TinyUSDNative
	{
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern void* c_tinyusd_malloc(UIntPtr nbytes);

		/// <summary>
		/// Returns 0 when failed. 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_free(void* ptr);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_token_new([MarshalAs(UnmanagedType.LPStr)] string str);

		/// <summary>
		/// Duplicate token object. Return null when failed. 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_token_dup(IntPtr tok);

		/// <summary>
		/// Length of token string. equivalent to std::string::size. 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern UIntPtr c_tinyusd_token_size(IntPtr tok);

		/// <summary>
		/// Get C char from a token.
		/// Returned char pointer is valid until `c_tinyusd_token` instance is free'ed.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern string c_tinyusd_token_str(IntPtr tok);

		/// <summary>
		/// Free token
		/// Return 0 when failed to free.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_token_free(IntPtr tok);

		/// <summary>
		/// New token vector(array) with size zero(empty) 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_token_vector_new_empty();

		/// <summary>
		/// New token vector(array) with given size `n` 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_token_vector_new(UIntPtr n, [MarshalAs(UnmanagedType.LPStr)] string toks);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_token_vector_free(IntPtr sv);

		/// <summary>
		/// Returns number of elements.
		/// 0 when empty or `tv` is invalid.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern UIntPtr c_tinyusd_token_vector_size(IntPtr sv);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_token_vector_clear(IntPtr sv);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_token_vector_resize(IntPtr sv, UIntPtr n);

		/// <summary>
		/// Return const string pointer for given index.
		/// Returns nullptr when index is out-of-range.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern string c_tinyusd_token_vector_str(IntPtr sv, UIntPtr idx);

		/// <summary>
		/// Replace `index`th token.
		/// Returns 0 when `sv` is invalid or `index` is out-of-range.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_token_vector_replace(IntPtr sv, UIntPtr idx, [MarshalAs(UnmanagedType.LPStr)] string str);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_string_new_empty();

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_string_new([MarshalAs(UnmanagedType.LPStr)] string str);

		/// <summary>
		/// Length of string. equivalent to std::string::size. 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern UIntPtr c_tinyusd_string_size(IntPtr s);

		/// <summary>
		/// Replace existing string with given `str`.
		/// `c_tinyusd_string` object must be new'ed beforehand.
		/// Return 0 when failed to set.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_string_replace(IntPtr s, [MarshalAs(UnmanagedType.LPStr)] string str);

		/// <summary>
		/// Get C char(`std::string::c_str()`)
		/// Returned char pointer is valid until `c_tinyusd_string` instance is free'ed.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern string c_tinyusd_string_str(IntPtr s);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_string_free(IntPtr s);

		/// <summary>
		/// New string vector(array) with given size `n` 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_string_vector_new_empty(c_tinyusd_string_vector* sv, UIntPtr n);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_string_vector_new(c_tinyusd_string_vector* sv, UIntPtr n, [MarshalAs(UnmanagedType.LPStr)] string strs);

		/// <summary>
		/// Returns number of elements.
		/// 0 when empty or `sv` is invalid.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern UIntPtr c_tinyusd_string_vector_size(c_tinyusd_string_vector* sv);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_string_vector_clear(c_tinyusd_string_vector* sv);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_string_vector_resize(c_tinyusd_string_vector* sv, UIntPtr n);

		/// <summary>
		/// Return const string pointer for given index.
		/// Returns nullptr when index is out-of-range.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern string c_tinyusd_string_vector_str(c_tinyusd_string_vector* sv, UIntPtr idx);

		/// <summary>
		/// Replace `index`th string.
		/// Returns 0 when `sv` is invalid or `index` is out-of-range.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_string_vector_replace(c_tinyusd_string_vector* sv, UIntPtr idx, [MarshalAs(UnmanagedType.LPStr)] string str);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_string_vector_free(c_tinyusd_string_vector* sv);

		/// <summary>
		/// Return the name of Prim type(e.g. "Xform", "Mesh", ...).
		/// Return NULL for unsupported/unknown Prim type.
		/// Returned char pointer is valid until Prim is modified or deleted.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern string c_tinyusd_prim_type_name(CTinyUSDPrimType prim_type);

		/// <summary>
		/// Return Builtin PrimType from a string.
		/// Returns C_TINYUSD_PRIM_UNKNOWN for invalid or unknown/unsupported Prim type
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern CTinyUSDPrimType c_tinyusd_prim_type_from_string([MarshalAs(UnmanagedType.LPStr)] string prim_type);

		/// <summary>
		/// Returns name of ValueType.
		/// The pointer points to static Thread-local storage(so thread-safe), thus no
		/// need to free it.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern string c_tinyusd_value_type_name(CTinyUSDValueType value_type);

		/// <summary>
		/// Return 1: Value type is numeric type(float3, int, ...). 0 otherwise(e.g. token, dictionary, ...)
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern uint c_tinyusd_value_type_is_numeric(CTinyUSDValueType value_type);

		/// <summary>
		/// Returns sizeof(value_type);
		/// For non-numeric value type(e.g. STRING, TOKEN) and invalid enum value, it
		/// returns 0. NOTE: Returns 1 for bool type.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern uint c_tinyusd_value_type_sizeof(CTinyUSDValueType value_type);

		/// <summary>
		/// Returns the number of components of given value_type;
		/// For example, 3 for C_TINYUSD_VALUE_POINT3F.
		/// For non-numeric value type(e.g. STRING, TOKEN), it returns 0.
		/// For scalar type, it returns 1.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern uint c_tinyusd_value_type_components(CTinyUSDValueType value_type);

		/// <summary>
		/// Return value type enum.
		/// Returns C_TINYUSD_VALUE_UNKNOWN when `value` is nullptr or invalid.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern CTinyUSDValueType c_tinyusd_value_type(IntPtr value);

		/// <summary>
		/// New Value with null(empty) value.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_null();

		/// <summary>
		/// Free Value.
		/// Internally calls `c_tinyusd_buffer_free` to free buffer associated with this
		/// Value.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_free(IntPtr val);

		/// <summary>
		/// Get string representation of Value content(pprint).
		/// Return 0 upon error.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_to_string(IntPtr val, IntPtr str);

		/// <summary>
		/// Free Value.
		/// Internally calls `c_tinyusd_buffer_free` to free buffer associated with this
		/// Value.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_free(IntPtr val);

		/// <summary>
		/// New Value with token type.
		/// NOTE: token data are copied. So it is safe to free token after calling this
		/// function.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_token(IntPtr val);

		/// <summary>
		/// New Value with string type.
		/// NOTE: string data are copied. So it is safe to free string after calling this
		/// function.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_string(IntPtr val);

		/// <summary>
		/// New Value with specific type.
		/// NOTE: Datas are copied.
		/// Returns 1 upon success, 0 failed.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_int(int val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_int2(c_tinyusd_int2_t val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_int3(c_tinyusd_int3_t val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_int4(c_tinyusd_int4_t val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_float(float val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_float2(c_tinyusd_float2_t val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_float3(c_tinyusd_float3_t val);
